# prot-skills

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.scripts.json  vite.config.ts  vitest.config.ts
.agents/harness/: context-map.md  index.md  lifecycle.md  risk-matrix.md  security-boundaries.md  tool-contract.md  verification.md
.husky/: commit-msg  pre-commit  pre-push
docs/: ai-review.md  migration-inventory.md  releasing.md
scripts/: audit-visual.mjs  audit-visual.ts  check-commit-message.mjs  check-commit-message.test.mjs  check-tokens.mjs  check-tokens.ts  create-release-tag.mjs  create-release-tag.test.mjs  create-release-tag.ts  package-release-assets.mjs  package-release-assets.ts  release-version.mjs  release-version.test.mjs  release-version.ts  sync-agent-skills.ts  sync-app-metadata.mjs  sync-app-metadata.test.mjs  sync-app-metadata.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  skill_commands.rs  tool_commands.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/models/: lifecycle.rs  link.rs  mod.rs  skill.rs  sync.rs  tool.rs
src-tauri/src/services/: discovery_service.rs  link_service.rs  mod.rs  skill_service.rs  tool_service.rs
src-tauri/src/utils/: mod.rs  path_utils.rs
(+223 files in other folders)
